--- a/.github/workflows/auto-minor-release.yml
+++ b/.github/workflows/auto-minor-release.yml
@@ -1,4 +1,4 @@
-name: auto-minor-release
+name: release-on-version
 
 on:
   push:
@@ -33,20 +33,34 @@ jobs:
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor }}@users.noreply.github.com"
 
-      - name: Install deps
-        run: npm ci --no-audit --no-fund --ignore-scripts
-
-      - name: Bump minor version and push tag
+      - name: Read package.json version
+        id: pkg
         run: |
-          NEW_VER=$(npm version minor -m "chore(release): %s")
-          echo "NEW_VER=$NEW_VER" >> $GITHUB_ENV
-          git push --follow-tags
+          echo "version=$(node -p \"require('./package.json').version\")" >> $GITHUB_OUTPUT
+
+      - name: Fetch tags
+        run: git fetch --tags --quiet
+
+      - name: Create Git tag if missing
+        id: tag
+        run: |
+          TAG=v${{ steps.pkg.outputs.version }}
+          if git rev-parse -q --verify refs/tags/$TAG >/dev/null; then
+            echo "exists=true" >> $GITHUB_OUTPUT
+            echo "tag=$TAG" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+          git tag $TAG
+          git push origin $TAG
+          echo "exists=false" >> $GITHUB_OUTPUT
+          echo "tag=$TAG" >> $GITHUB_OUTPUT
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ env.NEW_VER }}
-          name: Release ${{ env.NEW_VER }}
+          tag_name: ${{ steps.tag.outputs.tag }}
+          name: Release ${{ steps.tag.outputs.tag }}
           generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        if: steps.tag.outputs.exists == 'false'
