--- a/.github/workflows/auto-minor-release.yml
+++ b/.github/workflows/auto-minor-release.yml
@@ -4,8 +4,6 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    types: [closed]
 
 permissions:
   contents: write
@@ -13,9 +11,6 @@ permissions:
 jobs:
   release:
     runs-on: ubuntu-latest
-    if: >-
-      ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
-          (github.event_name == 'pull_request' && github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main') }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -35,8 +30,19 @@ jobs:
 
       - name: Read package.json version
         id: pkg
+        shell: bash
         run: |
-          echo "version=$(node -p \"require('./package.json').version\")" >> $GITHUB_OUTPUT
+          set -euo pipefail
+          if [[ ! -f package.json ]]; then
+            echo "package.json not found" >&2
+            exit 1
+          fi
+          VERSION=$(node -e "console.log(require('./package.json').version)")
+          if [[ -z "${VERSION}" ]]; then
+            echo "version is empty" >&2
+            exit 1
+          fi
+          echo "version=${VERSION}" >> "$GITHUB_OUTPUT"
 
       - name: Fetch tags
         run: git fetch --tags --quiet
