ci(release): publish to npm in same workflow; remove separate publish workflow

--- a/.github/workflows/auto-minor-release.yml
+++ b/.github/workflows/auto-minor-release.yml
@@ -70,3 +70,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         if: steps.tag.outputs.exists == 'false'
+
+      - name: Install deps (for publish)
+        run: npm ci --no-audit --no-fund --ignore-scripts
+
+      - name: Publish to npm
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npm publish --provenance --access public
